--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0.5, 1.0, 'y=1+2x+1x^2')"
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -43,10 +43,7 @@
     "plt.title(f'y={coeffs[0]}+{coeffs[1]}x+{coeffs[2]}x^2')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -69,10 +66,7 @@
     "$Derivative: y^{'} = 2+2x = 2(1+x)$"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -85,10 +79,7 @@
     "    return np.polyder(p)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -111,10 +102,7 @@
     "print(f'minimum point (x,y) = {tuple(min_point)}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -126,15 +114,12 @@
     "    return x - eta*np.polyval(grad,x)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def find_min_gd(grad,eta,epsilon,x,plot=False):\n",
@@ -155,15 +140,12 @@
     "    return x_tPlusOne,i"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -184,10 +166,7 @@
     "print(f'Minimum point with GD (x,y) = {tuple(gd_min_point)} ~ {tuple(min_point)}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -200,15 +179,12 @@
     "The smaller the Epsilon the closer the gd_min_point will be to the theoretical minimum."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -278,10 +254,7 @@
     "            print(f'x_init={x0}, eta={eta}, epsilon={epsilon}, T={t}')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -299,13 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0.5, 1.0, 'y=1+2x+1x^2')"
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,7 +296,7 @@
     "eta=0.1\n",
     "epsilon=0.001\n",
     "\n",
-    "x_hist = find_min_gd(grad_fx(coeffs),eta,epsilon,x0,True)[2]\n",
+    "x_hist = find_min_gd(grad_fx(coeffs),eta,epsilon,x0,True)\n",
     "y_hist = [np.polyval(np.poly1d(coeffs), x) for x in x_hist]\n",
     "plt.plot(x_range, y,label=\"f(x)=1+2x+x^2\")\n",
     "plt.scatter(x_hist,y_hist,c='r',label='f(x) during GD convergence')\n",
@@ -333,10 +306,7 @@
     "plt.title(f'y={coeffs[0]}+{coeffs[1]}x+{coeffs[2]}x^2')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
